--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(58,180,123);
+background: linear-gradient(90deg, rgba(58,180,123,1) 0%, rgba(61,155,158,1) 34%, rgba(64,132,190,1) 81%, rgba(69,88,252,1) 100%);
 }
 
 code {
